# spore

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
src/spore/: __init__.py  cli.py  federation.py  index.py  models.py  repo.py  watch.py
tests/: conftest.py  test_cli.py  test_e2e.py  test_federation.py  test_index.py  test_models.py  test_repo.py  test_watch.py
